fix z-index of center service block

--- a/src/base/blocks/services/block.css
+++ b/src/base/blocks/services/block.css
@@ -55,6 +55,7 @@
       margin: -20px -8px 0;
       position: relative;
       background-color: #fff;
+      z-index: 2;
 
       .popular-block {
         display: block;
